samples/_failures_safe/1761450010_a4f19d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f56b3d1.c: In function ‘main’:
./samples/SAFE/__tmp_5f56b3d1.c:137:12: error: missing terminating " character
  137 |     printf("Enter log entries (format: YYYY-MM-DD HH:MM:SS
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5f56b3d1.c:137:5: error: expected expression at end of input
  137 |     printf("Enter log entries (format: YYYY-MM-DD HH:MM:SS
      |     ^~~~~~
./samples/SAFE/__tmp_5f56b3d1.c:137:5: error: expected declaration or statement at end of input
